--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -1,13 +1,21 @@
 .characterEditor {
+  position: relative;
+  overflow: hidden;
   padding-top: 128px;
   padding-bottom: 64px;
+  isolation: isolate;
 }
 
 .maxWidthWrapper {
+  max-width: 1024px;
+  padding: 0 16px;
+  position: relative;
+  z-index: 1;
 }
 
 .header {
   padding-bottom: 64px;
+  width: 65%;
 }
 
 .title {
@@ -24,7 +32,32 @@
 }
 
 .characterWrapper {
+  position: fixed;
+  height: 500px;
+  top: 144px;
+  right: 32px;
+  z-index: 1;
 }
 
 .controlColumn {
+  width: 50%;
+}
+
+.perspective {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 60%;
+  background-color: hsl(195deg, 20%, 86%);
+}
+
+@media (max-width: 640px) {
+  .controlColumn {
+    display: flex;
+    gap: 16px;
+    overflow-x: auto;
+    white-space: nowrap;
+    width: 100%;
+  }
 }
